--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -11,6 +11,15 @@
 	margin: 0;
 }
 
+.user {
+	display: flex;
+	align-items: center;
+}
+
+img {
+	margin-left: 0.2em;
+}
+
 .wallet {
 	cursor: pointer;
 	color: black;
