feat: added user balances to the UI

--- a/src/components/UserData/user_data.css
+++ b/src/components/UserData/user_data.css
@@ -1,6 +1,7 @@
 .user_data {
 	border: 1px solid red;
-	padding: 0.2em;
+	padding: 0.2em 0.6em;
 	display: flex;
 	justify-content: space-between;
+	font-size: 0.75em;
 }
