--- a/src/components/UserData/user_data.css
+++ b/src/components/UserData/user_data.css
@@ -1,5 +1,5 @@
 .user_data {
-	border: 1px solid red;
+	border-bottom: 1px solid black;
 	padding: 0.2em 0.6em;
 	display: flex;
 	justify-content: space-between;
