--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
 }
 
-.buy_token {
+.buy_token, .sell_token {
 	cursor: pointer;
 	/*color: black;
     border-color: #6c757d;
