--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,4 +1,4 @@
-.main {
+.transact {
 	display: flex;
     /*border: 1px solid red;*/
     justify-content: space-between;
@@ -13,4 +13,8 @@
     border: 1px solid #6c757d;
     padding: 0.5rem 0.5rem;
     border-radius: 0.25rem;*/
+}
+
+.loader {
+    text-align: center;
 }
